--- a/themes/basic/templates/layout.html.twig
+++ b/themes/basic/templates/layout.html.twig
@@ -12,11 +12,7 @@
         <script src="{{ app.request.basepath }}/js/tb.js"></script>
         <script src="{{ app.request.basepath }}/js/main.js"></script>
         <script>
-            angular.module('Silex', [])
-                .config(['$interpolateProvider', function ($interpolateProvider) {
-                    $interpolateProvider.startSymbol('[[');
-                    $interpolateProvider.endSymbol(']]');
-            }]);
+            
         </script>
 
     </head>
@@ -24,48 +20,27 @@
 
         {{render(url('menu'))}}
             
-
         <div class="container">
+      
+            <div class="hero-unit">
+                <h1>Hello, world!</h1>
+            </div>
 
-      <!-- Main hero unit for a primary marketing message or call to action -->
-      <div class="hero-unit">
-        <h1>Hello, world!</h1>
-        <p>This is a template for a simple marketing or informational website. It includes a large callout called the hero unit and three supporting pieces of content. Use it as a starting point to create something more unique.</p>
-        <p><a href="#" class="btn btn-primary btn-large">Learn more &raquo;</a></p>
-      </div>
+            {% set alertTypeAvaillable = [ 'info', 'success', 'warning', 'error'] %}
+            {% for alert in alertTypeAvaillable %}
+                <div class="alert alert-{{ alert }}" >
+                    <button class="close" data-dismiss="alert">×</button>
+                    Message
+                </div>
+            {% endfor %}
 
-      <!-- Example row of columns -->
-      <div class="row">
-        <div class="span4">
-          <h2>Heading</h2>
-          <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-          <p><a class="btn" href="#">View details &raquo;</a></p>
-        </div>
-        <div class="span4">
-          <h2>Heading</h2>
-          <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-          <p><a class="btn" href="#">View details &raquo;</a></p>
-       </div>
-        <div class="span4" ng-controller="PhoneListCtrl">
-          <h2>Heading</h2>
-            <ul>
-                <li ng-repeat="phone in phones">
-                    [[phone.name]]
-                    <p>[[phone.snippet]]</p>
-                </li>
-            </ul>
-        </div>
-      </div>
+            <div class="row">
+                <div class="span12">
+                    {% block content %}{% endblock %}
+                </div>
+            </div>
 
-      <hr>
+        </div> 
 
-      <footer>
-        <p>&copy; Company 2013</p>
-      </footer>
-
-    </div> <!-- /container -->
-            
-            
-        
     </body>
 </html>
